--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -21,7 +21,7 @@ code {
 .highlight .n { color: #A52A2A } /* Name */
 .highlight .o { color: #00008B } /* Operator */
 .highlight .x { color: #CB4B16 } /* Other */
-.highlight .p { color: #93A1A1 } /* Punctuation */
+.highlight .p { color: #000 } /* Punctuation */
 .highlight .cm { color: #586E75 } /* Comment.Multiline */
 .highlight .cp { color: #00008B } /* Comment.Preproc */
 .highlight .c1 { color: #228B22 } /* Comment.Single */
