--- a/style.scss
+++ b/style.scss
@@ -111,6 +111,14 @@ img {
   max-width: 100%;
 }
 
+.center-image
+{
+    margin: 0 auto;
+    display: block;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
 // Fixes images in popup boxes from Google Translate
 .gmnoprint img {
   max-width: none;
