ajustes visuais e classes de mensagens

--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -18,7 +18,7 @@ code {
 .highlight .g { color: #93A1A1 } /* Generic */
 .highlight .k { color: #00008B } /* Keyword */
 .highlight .l { color: #93A1A1 } /* Literal */
-.highlight .n { color: #A52A2A } /* Name */
+.highlight .n { color: #6a5ed6 } /* Name */
 .highlight .o { color: #00008B } /* Operator */
 .highlight .x { color: #CB4B16 } /* Other */
 .highlight .p { color: #000 } /* Punctuation */
