--- a/style.scss
+++ b/style.scss
@@ -292,6 +292,43 @@ footer {
   text-align: center;
 }
 
+
+.info, .success, .warning, .error, .validation {
+      border: 1px solid;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      border-radius: 5px;
+      margin: 10px 0px;
+      padding: 15px 10px 15px 50px;
+      background-repeat: no-repeat;
+      background-position: 10px center;
+    }
+    .info {
+      color: #00529B;
+      background-color: #BDE5F8;
+      background-image: url('images/messages/info.png');
+    }
+    .success {
+      color: #4F8A10;
+      background-color: #DFF2BF;
+      background-image: url('images/messages/success.png');
+    }
+    .warning {
+      color: #9F6000;
+      background-color: #FEEFB3;
+      background-image: url('images/messages/warning.png');
+    }
+    .error {
+      color: #D8000C;
+      background-color: #FFBABA;
+      background-image: url('images/messages/error.png');
+    }
+    .validation{
+      color: #D63301;
+      background-color: #FFCCBA;
+      background-image: url('images/messages/validation.png');
+    }
+
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
